--- a/css/shared.css
+++ b/css/shared.css
@@ -1,11 +1,5 @@
-*{
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
 :root{
+    scroll-behavior: smooth;
     height: 100%;
     --main-text-accent:rebeccapurple;
     --badge-boder: 5px solid rgba(190,130,190);
@@ -16,6 +10,14 @@
     --cursor-flicker: flick 0.7s infinite;
     }
 
+*{
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
 @font-face {
     font-family: 'Quicksand Book';
     src: url('../fonts/QuicksandBook-Regular.woff2') format('woff2'),
@@ -24,6 +26,35 @@
     font-style: normal;
     font-display: swap;
 }
+
+body{
+    background-color: rgb(10,10,15)
+
+    background-attachment: fixed;
+    position: relative;
+    z-index: -3;
+
+    -webkit-box-shadow: -1px 150vh 180px -200px rgba(10,10,15,1) inset;
+
+    background-attachment:fixed;
+
+}
+
+body {
+    background-image:
+      linear-gradient(
+        to bottom,
+        transparent 99%,
+        #1f0f2e),
+      linear-gradient(
+        to right, 
+        rgb(10,10,15) 99%,
+        #1f0f2e 100%);
+    background-size:
+      100px 100px,
+      100px 100px;
+
+  }
 
 a{
     text-decoration: none;
@@ -68,7 +99,7 @@ nav{
 }
 
 .command:hover::before{
-    content: "site: $ cd ./";
+    content: "site: $ cat ./";
     color: var(--main-text-accent);
 }
 
@@ -77,11 +108,11 @@ nav{
     animation: var(--cursor-flicker) ;
 }
 
-nav > a:not(:first-child){
+nav > a:not(.active){
     display: none;
 }
 
-nav > a:first-of-type::before{
+nav > .active::before{
     content: "./";
 }
 
@@ -93,18 +124,18 @@ nav:hover{
     background-color: var(--terminal);
 }
 
-
 .badge{
-    transform: skewX(-10deg);
     font-size: clamp(2.2rem, 10vmin, 5rem);
     font-family: Arial;
     color: white;
     text-transform: lowercase;
     font-weight: bold;
     padding: 10px;
-    border: var(--badge-boder);
-    background-color: var(--badge-bg);
+   /* border: var(--badge-boder);*/
+   /* background-color: var(--badge-bg);*/
+    background-color: rebeccapurple;
     width: max-content;
+    margin: 15px 0px;
 }
 
 .badge::before{
@@ -117,7 +148,85 @@ nav:hover{
 }
 
 .small{
-    font-size: clamp(1.6rem, 8vmin, 4.2rem)
+    font-size: clamp(1.6rem, 8vmin, 4.2rem);
+    background-color: rebeccapurple;
+}
+
+/*If an element has a badge and small class then down add bg color to it,
+this rule has higher specifity*/
+
+
+.display{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+}
+
+.card{
+    
+}
+
+.contact-items{
+    display: flex;
+    gap: 20px;
+    margin: 10px;
+}
+
+.contact-items i{
+    font-size: 1.5rem;
+    color: white;
+}
+
+.contact-items i:hover{
+    font-size: 1.5rem;
+    filter: drop-shadow(0px 0px 10px blue);
+    color: blueviolet;
+}
+
+.wrapper{
+    padding: 15px;
+}
+
+.blob-filter{
+    filter: url("#goo");
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    top: 0;
+    bottom: 0;
+    height: 250vh;
+    overflow: hidden; /*AVOID BLOBS STRETCHIN THE VIEWPORT*/
+}
+
+.lamp{
+    filter: blur(40px);
+}
+
+.blob {
+    position: absolute;
+    top: 0;
+    left: 0;
+    fill: rgb(10,10,10);
+    width: 50vmax;
+    z-index: -1;
+    animation: move 40s ease-in-out infinite;
+    transform-origin: 50% 50%;
+    filter: drop-shadow(0px 0px 50px rebeccapurple);
+  }
+
+  .blob svg{
+    transform: scale(1.3);
+}
+
+  .blob-2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    fill: rgb(10,10,10);
+    width: 10vmax;
+    z-index: -1;
+    animation:  move 60s ease-in-out infinite ;
+    transform-origin: 50% 50%;
+    filter: drop-shadow(0px 0px 40px rebeccapurple);
 }
 
 @keyframes move {
